--- a/.github/workflows/fetch-latest-release.yml
+++ b/.github/workflows/fetch-latest-release.yml
@@ -23,7 +23,7 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo ${steps.latest_release.outputs.release_name}
-        echo ${steps.latest_release.outputs.release_tag_name}
-        echo ${steps.latest_release.outputs.release_body}
+        echo ${{steps.latest_release.outputs.release_name}}
+        echo ${{steps.latest_release.outputs.release_tag_name}}
+        echo ${{steps.latest_release.outputs.release_body}}
         
