--- a/.github/workflows/fetch-latest-release.yml
+++ b/.github/workflows/fetch-latest-release.yml
@@ -27,7 +27,7 @@ jobs:
         echo "${{steps.latest_release.outputs.release_tag_name}}"
         echo "${{steps.latest_release.outputs.release_body}}"
 
-    - name: Create Draft Release
+    - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -36,5 +36,5 @@ jobs:
         tag_name: ${{steps.latest_release.outputs.release_tag_name}}
         release_name: ${{steps.latest_release.outputs.release_name}}
         body: ${{steps.latest_release.outputs.release_body}}
-        draft: true
+        draft: false
         prerelease: false
