--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: czerwonk/ovirt_exporter
-        ref: ${{steps.latest_release.outputs.release_tag_name}}
+        ref: ${{github.event.release_tag_name}}
 
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
