--- a/.github/workflows/fetch-latest-release.yml
+++ b/.github/workflows/fetch-latest-release.yml
@@ -3,7 +3,7 @@ name: Get latest release version
 on:
   push:
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '*/15 1 * * *'
 
 jobs:
   get-latest-version:
