--- a/.github/workflows/fetch-latest-release.yml
+++ b/.github/workflows/fetch-latest-release.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
+
     - name: Fetch latest releases
       run: |
         curl -sS https://api.github.com/repos/czerwonk/ovirt_exporter/releases/latest | jq -r '{name, tag_name, body}' > releases/latest.json
