--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -53,17 +53,8 @@ jobs:
       uses: AButler/upload-release-assets@v2.0
       with:
         release-tag: ${{steps.latest_release.outputs.release_tag_name}}
-        files: 'dist/*'
+        files: './dist/*'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-          
-    - uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/ovirt_exporter*
-        asset_name: my-artifact.zip
-        asset_content_type: application/gzip
 
     - uses: eregon/publish-release@v1
       env:
