--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -46,7 +46,7 @@ jobs:
         tag_name: ${{steps.latest_release.outputs.release_tag_name}}
         release_name: ${{steps.latest_release.outputs.release_name}}
         body: ${{steps.latest_release.outputs.release_body}}
-        draft: true
+        draft: false
         prerelease: false
 
     - name: Upload assets
