--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -16,6 +16,13 @@ jobs:
       with:
         path: .upstream
 
+    - name: Fetch latest release version
+      id: fetch_latest_release
+      uses: reloc8/action-latest-release-version@1.0.0
+
+    - name: Test
+      run: echo ${{ steps.fetch-latest-release.outputs.latest-release }}
+
     - id: latest_release
       run: |
         IFS='|' read name tag_name body < <(echo $(cat .upstream/releases/latest.json | jq -r '. | [.name, .tag_name, .body] | join("|")'))
