--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         IFS='|' read name tag_name body < <(echo $(cat .upstream/releases/latest.json | jq -r '. | [.name, .tag_name, .body] | join("|")'))
         echo "::set-output name=release_name::${name}"
-        echo "::set-output name=release_tag_name::${tag_name}"
+        echo "::set-output name=release_tag_name::v${tag_name}"
         echo "::set-output name=release_body::${body}"
 
     - name: Fetch latest release
@@ -56,7 +56,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{steps.latest_upstream_release.outputs.release_tag_name}}
+        tag_name: ${{steps.latest_upstream_release.outputs.release_tag_name}}
         release_name: ${{steps.latest_upstream_release.outputs.release_name}}
         body: ${{steps.latest_upstream_release.outputs.release_body}}
         draft: true
